--- a/src/view/lib/owo.css
+++ b/src/view/lib/owo.css
@@ -40,7 +40,7 @@
   background: #fff;
   border: 1px solid #ddd;
   top: 2em;
-  border-radius: 0 4px 4px 4px;
+  border-radius: 0 4px 4px;
 }
 
 .OwO .OwO-body .OwO-items {
